--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('https://ik.imagekit.io/amirfaramarzpour/pasha_breakfast_cafe/Delicious%20Brunch%20Food%20Ideas.jpg?updatedAt=1735422032392') no-repeat center center fixed;
+            background: url('https://ik.imagekit.io/amirfaramarzpour/pasha_breakfast_cafe/photo_2024-12-30_15-38-55.jpg?updatedAt=1735560720605') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             flex-direction: column;
@@ -62,10 +62,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            
         }
         nav a {
             font-family: 'Roboto', sans-serif;
-            margin: 3px 0;
+            margin: 0px 0;
             padding: 10px 20px;
             background-color: rgba(0, 0, 0, 0.712);
             text-decoration: none;
@@ -81,7 +82,7 @@
         @media (max-width: 600px) {
             nav a {
                 width: 80%;
-                margin: 10px auto;
+                margin: 3px auto;
             }
         }
         footer {
