--- a/map.html
+++ b/map.html
@@ -107,7 +107,7 @@
             transition: color 0.3s ease;
         }
         .social-icons a:hover {
-            color: #f87140;
+            color: #9dad0d;
         }
         @media (max-width: 600px) {
             .map-container {
@@ -134,7 +134,7 @@
                 color: #333; /* Dark text color */
                 padding: 10px; /* Padding around the text */
                 border: 1px solid #ddd; /* Light border */
-                border-radius: 5px; /* Rounded corners */
+                border-radius: 10px; /* Rounded corners */
                 text-align: center; /* Centered text */
                 margin: 0 auto; /* Centered and spaced from other elements */
                 width: fit-content; /* Adjust the width to fit the content */
@@ -173,7 +173,7 @@
             <h2>Follow Us</h2>
             <div class="social-icons">
                 <a href="https://www.instagram.com/breakfast_pasha" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://t.me/" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+                <a href="https://t.me/+989115117291" target="_blank"><i class="fab fa-telegram-plane"></i></a>
             </div>
         </div>
     </div>
