--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </nav>
     </div>
     <footer>
-        © 2025 Pasha Business Group | Design: <a href="https://wa.me/+989116812737" target="_blank" style="color: white; text-decoration: underline;">Amir</a>
+        © 2025 Pasha Business Group | Design: <a href="http://amirfaramarzpour.ir/" target="_blank" style="color: white; text-decoration: underline;">Amir</a>
     </footer>
     
 </body>
