--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+9<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -175,7 +175,7 @@
     </div>
     
     <footer>
-        © 2025 Pasha Business Group | Design: <a href="https://wa.me/+989116812737" target="_blank" style="color: white; text-decoration: underline;">Amir</a>
+        © 2025 Pasha Business Group | Design: <a href="http://amirfaramarzpour.ir/" target="_blank" style="color: white; text-decoration: underline;">Amir</a>
     </footer>
     <script>
         const itemsData = {
