--- a/map.html
+++ b/map.html
@@ -9,33 +9,65 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pasha Breakfast Cafe</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Changa:wght@200..800&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Lateef&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kirang+Haerang&display=swap" rel="stylesheet">
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    rel="stylesheet"
+  />
     <style>
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            background-color: #030f46; /* Changed background color to white */
-            display: flex;
+            background-color: #011614;            display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
         header {
-            background: linear-gradient(to right, rgb(20, 30, 48, 0.5), rgb(36, 59, 85, 0.5)); /* Increased transparency */
+            background: linear-gradient(to right, rgba(20, 30, 48, 0), rgba(36, 59, 85, 0)); /* Increased transparency */
             color: white;
             text-align: center;
             padding: 10px 0;
             position: relative;
-            font-size: 1.5em;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-family: 'Montserrat', sans-serif;
-        }
+            font-family: 'Lalezar', cursive;
+            font-size: 32px;
+                }
         header img {
             margin-right: 10px; /* Space between the logo and text */
             max-width: 100px;
         }
         footer {
-            background: linear-gradient(to right, rgb(20, 30, 48, 0.5), rgb(36, 59, 85, 0.5)); /* Increased transparency */
+            background: linear-gradient(to right, #141e3000, rgba(36, 59, 85, 0)); /* Increased transparency */
             color: white;
             text-align: center;
             padding: 10px 0;
@@ -53,6 +85,7 @@
             align-items: center;
             text-align: center;
             padding: 10px; /* Reduced padding */
+
         }
         .map-container {
             width: 90%;
@@ -68,13 +101,15 @@
         }
         .contact-us, .follow-us {
             margin: 10px 0; /* Reduced margin */
+            font-family: 'Lalezar', cursive;
+            font-size: 16px;
         }
         .contact-us h2, .follow-us h2 {
             margin-bottom: 5px; /* Reduced margin */
-            color: #858383;
+            color: #f7fdf7;
         }
         .phone {
-            font-size: 1.0em;
+            font-size: 1.2em;
             color: #fff5f5c8;
             text-decoration: none;
             display: inline-flex; /* Use inline-flex for better fitting */
