--- a/menu.html
+++ b/menu.html
@@ -241,7 +241,7 @@
                 { name: 'اسکرامبل اگ', price: '387 T', image: '' },
                 { name: 'گواکامولی بیکن', price: '425 T', image: '' },
                 { name: 'لازانیا', price: '425 T', image: '' },
-                { name: 'پاستا', price: '-', image: '' },
+                { name: 'پاستا', price: '300', image: '' },
 
             ],
             'Category 4': [
