--- a/map.html
+++ b/map.html
@@ -212,8 +212,6 @@
             </div>
         </div>
     </div>
-    <footer>
-        © 2025 Pasha Business Group | Design: <a href="http://amirfaramarzpour.ir/" target="_blank" style="color: white; text-decoration: underline;">Amir</a>
-    </footer>
+<footer>© 2025 Pasha Business Group | Design: <a href="http://amirfaramarzpour.ir/" target="_blank" style="color: white; text-decoration: underline;">AmirFaramarzpour</a></footer>
 </body>
 </html>
